--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Pianos Guerrero</title>
     <meta charset="UTF-8">
-    <link href="img/favicon.png" rel="shortcut icon">
+    <link href="img/icons/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=72887" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=72887" type="text/javascript"></script>
+    <link href="css/main.css?v=56454" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=56454" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -43,8 +43,8 @@
                   <li><a data-goto=".section--services">Servicios</a></li>
                   <li><a data-goto=".section--catalogo">Catálogo</a></li>
                   <li><a data-goto=".section--media">Historia</a></li>
-                  <li><a data-goto=".section--testimonies">Casos de éxito</a></li>
-                  <li><a href="#">Contacto</a></li>
+                  <li><a data-goto=".section--testimonies">Testimonios</a></li>
+                  <li><a href="contact.html">Contacto</a></li>
                 </ul>
               </div>
             </div>
@@ -68,7 +68,7 @@
             <div class="section__body__va">
               <!--.section__logoimg(src="img/logos/logo-white.png")
               -->
-              <h1 class="section__title">Nullam cursus aenean dui ligula eros justo nostra sapien ligula duis nisi venenatis placerat praesent.
+              <h1 class="section__title">Phasellus aenean vitae placerat rhoncus neque curabitur taciti accumsan netus fringilla inceptos sodales auctor platea.
               </h1>
               <div class="section__button"><a data-goto=".section--services"><span class="fa fa-chevron-down"></span></a></div>
             </div>
@@ -124,13 +124,13 @@
                 </div>
                 <div class="article__content">
                   <div class="article__body">
-                    <h3 class="article__title">Vitae id laoreet
+                    <h3 class="article__title">Feugiat proin nostra
                     </h3>
-                    <p class="article__description">Praesent per auctor velit rutrum ad felis suscipit ac ut fringilla rhoncus habitant habitant vel.
+                    <p class="article__description">Posuere phasellus facilisis volutpat erat pulvinar placerat metus consequat a ornare aliquet nam praesent etiam.
                     </p>
                   </div>
                 </div>
-                <div class="article__button"><a href="#" class="btn">Ver mas<span class="fa fa-angle-right"></span></a></div>
+                <div class="article__button"><a href="single-product.html" class="btn">Ver mas<span class="fa fa-angle-right"></span></a></div>
               </article>
             </div>
             <div class="col-md-4">
@@ -140,13 +140,13 @@
                 </div>
                 <div class="article__content">
                   <div class="article__body">
-                    <h3 class="article__title">Elit integer semper
+                    <h3 class="article__title">Ad vivamus tellus
                     </h3>
-                    <p class="article__description">Fringilla integer nisl in metus quisque luctus nec colus tempus risus volutpat sociosqu donec est.
+                    <p class="article__description">Quis varius volutpat proin proin aliquet gravida curabitur elit nulla risus curae netus interdum vulputate.
                     </p>
                   </div>
                 </div>
-                <div class="article__button"><a href="#" class="btn">Ver mas<span class="fa fa-angle-right"></span></a></div>
+                <div class="article__button"><a href="single-product.html" class="btn">Ver mas<span class="fa fa-angle-right"></span></a></div>
               </article>
             </div>
             <div class="col-md-4">
@@ -156,13 +156,13 @@
                 </div>
                 <div class="article__content">
                   <div class="article__body">
-                    <h3 class="article__title">Sociosqu colus odio
+                    <h3 class="article__title">Faucibus semper suscipit
                     </h3>
-                    <p class="article__description">Elit himenaeos fusce est lacus accumsan euismod massa sociosqu consequat ullamcorper curabitur feugiat nisi cursus.
+                    <p class="article__description">Curabitur donec imperdiet quis pharetra mattis sagittis ultrices volutpat eleifend sed malesuada class interdum sed.
                     </p>
                   </div>
                 </div>
-                <div class="article__button"><a href="#" class="btn">Ver mas<span class="fa fa-angle-right"></span></a></div>
+                <div class="article__button"><a href="single-product.html" class="btn">Ver mas<span class="fa fa-angle-right"></span></a></div>
               </article>
             </div>
             <div class="col-md-4">
@@ -172,13 +172,13 @@
                 </div>
                 <div class="article__content">
                   <div class="article__body">
-                    <h3 class="article__title">Aenean ante ligula
+                    <h3 class="article__title">Mattis curabitur ligula
                     </h3>
-                    <p class="article__description">Massa ante adipiscing vehicula condimentum varius etiam class vehicula senectus facilisis donec non aenean proin.
+                    <p class="article__description">Himenaeos porta sem ligula quam habitasse porta risus quisque ante etiam vitae phasellus rhoncus accumsan.
                     </p>
                   </div>
                 </div>
-                <div class="article__button"><a href="#" class="btn">Ver mas<span class="fa fa-angle-right"></span></a></div>
+                <div class="article__button"><a href="single-product.html" class="btn">Ver mas<span class="fa fa-angle-right"></span></a></div>
               </article>
             </div>
             <div class="col-md-4">
@@ -188,16 +188,17 @@
                 </div>
                 <div class="article__content">
                   <div class="article__body">
-                    <h3 class="article__title">Laoreet sed donec
+                    <h3 class="article__title">Id cras a
                     </h3>
-                    <p class="article__description">Interdum varius donec sodales mollis ultrices tellus rhoncus commodo per ornare erat pretium suscipit nullam.
+                    <p class="article__description">Colus adipiscing orci purus sem pretium vulputate tortor netus vel libero ut elementum magna massa.
                     </p>
                   </div>
                 </div>
-                <div class="article__button"><a href="#" class="btn">Ver mas<span class="fa fa-angle-right"></span></a></div>
+                <div class="article__button"><a href="single-product.html" class="btn">Ver mas<span class="fa fa-angle-right"></span></a></div>
               </article>
             </div>
           </div>
+          <div class="section__footer"><a href="catalogue.html" class="btn btn--color">Ir al catálogo<span class="fa fa-angle-right"></span></a></div>
         </div>
       </section>
       <section class="section--media section--light">
@@ -242,7 +243,7 @@
       <section class="section--testimonies section--color">
         <div class="section__wrap">
           <div class="section__header">
-            <h3 class="section__title">Casos de éxito</h3>
+            <h3 class="section__title">Testimonios</h3>
           </div>
           <div class="section__body">
             <div class="section__avatars">
@@ -339,7 +340,7 @@
         <div class="section__wrap">
           <div class="section__body">
             <h2 class="section__title">Comunicate con nosotros</h2>
-            <p class="section__description">Morbi quisque convallis eleifend pharetra convallis porttitor viverra cras quis. Purus tempus tellus odio ad aenean dapibus scelerisque ante fusce. Suspendisse lobortis sodales purus nunc sodales nibh taciti fames velit eros malesuada nostra ullamcorper integer.
+            <p class="section__description">Phasellus conubia habitasse himenaeos ad fermentum accumsan nullam semper per. Gravida curabitur mi risus lectus enim congue mi torquent venenatis. Colus lacinia tortor at sodales blandit ad turpis quis quisque pretium cubilia imperdiet aptent elit.
             </p><a href="#" class="btn btn--padding">Contacto</a>
           </div>
         </div>
